 * Renamed `ConvertTo-PropagationFlags` to [ConvertTo-PropagationFlag](http://get-carbon.org/help/ConvertTo-PropagationFlag.html), with backwards-compatible alias.
 * Renamed `ConvertTo-PropagationFlag`'s `ContainerInheritanceFlags` parameter to `ConvertTo-InheritanceFlag`, with backwards-compatible alias.
 
 
# 0.5.0.0 (7 January 2013)

## Upgrade Instructions

This release contains many backwards incompatible changes.  We apologize for this inconvenience.  We are making these changes so we can get ready for the v1.0 release.  One of our goals for v1.0 is to get the functions and their interfaces internally consistent and consistent with PowerShell naming schemes.  Once v1.0 is out the door, backwards-incompatible changes will be phased in as much as possible.

Take the following steps to get your scripts to work with this release.

### Certificates

Replaces usages of:

 * `Get-SslCertificateBinding` with `Get-SslCertificateBindings`
 * `Get-SslCertificateBinding -IPPort '0.0.0.0:443'` with `Get-SslCertificateBindings`
 * `Get-SslCertificateBinding -IPPort '10.1.1.1:8001` with `Get-SslCertificateBindings -IPAddress '10.1.1.1' -Port 8001`
 * `Test-SslCertificateBinding -IPPort '0.0.0.0:443` with `Test-SslCertificateBinding`
 * `Test-SslCertificateBinding -IPPort '10.1.1.1:8001` with `Test-SslCertificateBinding -IPAddress '10.1.1.1' -Port 8001`
 * `Set-SslCertificateBinding -IPPort '0.0.0.0:443` with `Set-SslCertificateBinding`
 * `Set-SslCertificateBinding -IPort '1.2.3.4:8001' with `Set-SslCertificateBinding -IPAddress '1.2.3.4' -Port 8001
 * `Remove-SslCertificateBinding -IPPort '0.0.0.0:443` with `Remove-SslCertificateBinding`
 * `Remove-SslCertificateBinding -IPPort '10.1.1.1:8001` with `Remove-SslCertificateBinding -IPAddress '10.1.1.1' -Port 8001`
 * `Remove-Certificate` with `Uninstall-Certificate`

### Computer

Replace usages of

 * `Set-EnvironmentVariable -Scope 'Process'` with `Set-EnvironmentVariable -ForProcess`